--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     
-    <a href="www.google.com.br">Google</a>
+    <a href="https://www.google.com/">Google</a>
 
     
     <audio src="abstract-future-bass-162604.mp3" controls> </audio>
