--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Leandro Rodrigues">
+    <meta name="keywords" content="Aula06, Desenvolvimento web, Fatec ZL">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 06</title>
+    <meta name="description" content="Essa é a nossa página principal">
+    <title>Pagina Inicial</title>
 
     <style>
         .midia{
@@ -23,7 +26,19 @@
 </head>
 <body>
 
-    <h2>Inserindo Multimidias</h2>
+   <header><h1>Pagina Inicial</h1></header> 
+
+    <nav>
+        <h5>Menu</h5>
+        <ul>
+            <li><a href="#">Pagina Inicial</a></li>
+            <li><a href="contato.html">Contato</a></li>
+            <li><a href="sobre.html">Sobre nós</a></li>
+        </ul>
+
+    </nav>
+
+   <center><h1>Inserindo Multimidias</h1></center> 
 
     <div class="midia">
     
@@ -36,6 +51,8 @@
         <iframe width="1000" height="720" src="https://www.youtube.com/embed/Y5sxFB_6GcM" title="1 hora de cano caindo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
     </div>
+
+    <hr>
 
     <audio src="abstract-future-bass-162604.mp3" controls> </audio>
 
@@ -167,4 +184,8 @@
     </center>
 
 </body>
+
+<footer>
+    <h6>Todos os direitos reservados</h6>
+</footer>
 </html>
