--- a/index.html
+++ b/index.html
@@ -6,23 +6,9 @@
     <meta name="keywords" content="Aula06, Desenvolvimento web, Fatec ZL">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Essa é a nossa página principal">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Pagina Inicial</title>
 
-    <style>
-        .midia{
-            display: flex;
-        }
-        form{
-            border-style: solid;
-            border-color: black;
-            border-width: 1px;
-            border-radius: 10px;
-            align-items: center;
-            justify-content: center;
-            display: inline-block;
-            padding: 10px;
-        }
-    </style>
 </head>
 <body>
 
